...
                    android:background="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </android.support.design.widget.AppBarLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reposRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:scrollbars="vertical"
                android:background="@android:color/white"
                android:divider="@android:color/darker_gray"
...
